--- a/IClothingApplication/Web.config
+++ b/IClothingApplication/Web.config
@@ -61,7 +61,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="ICLOTHINGEntities" connectionString="metadata=res://*/Models.ICLOTHINGModel.csdl|res://*/Models.ICLOTHINGModel.ssdl|res://*/Models.ICLOTHINGModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=H-LAPTOP\SQLSERVER;initial catalog=ICLOTHING;integrated security=True;multipleactiveresultsets=True;trustservercertificate=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="ICLOTHINGEntities" connectionString="metadata=res://*/Models.ICLOTHINGModel.csdl|res://*/Models.ICLOTHINGModel.ssdl|res://*/Models.ICLOTHINGModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-3F40V9M;initial catalog=ICLOTHING;integrated security=True;multipleactiveresultsets=True;trustservercertificate=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
