--- a/.gitignore
+++ b/.gitignore
@@ -363,5 +363,5 @@ MigrationBackup/
 FodyWeavers.xsd
 
 IClothingApplication/Web.config
-IClothingApplication/Models/ICLOTHINGModel.Designer.cs
-IClothingApplication/Models/ICLOTHINGModel.edmx
+IClothingApplication/Models/
+
