--- a/IClothingApplication/IClothingApplication.csproj
+++ b/IClothingApplication/IClothingApplication.csproj
@@ -252,19 +252,27 @@
     <Content Include="Images\man.png" />
     <Content Include="Images\pencil.png" />
     <Content Include="Images\placeholder.jpg" />
+    <Content Include="Images\Products\5-Pocket Denim Jeans.jpg" />
+    <Content Include="Images\Products\90s Loose Fit Jeans.jpg" />
     <Content Include="Images\Products\AeroSwift Dri-FIT ADV Running Pants.jpg" />
     <Content Include="Images\Products\Children%27s Wool Sweater With GG.jpg" />
     <Content Include="Images\Products\Crochet Crop Top.jpg" />
     <Content Include="Images\Products\Denim and Silk Banana Tree Print Jeans.jpg" />
+    <Content Include="Images\Products\Dri-FIT Legend T-Shirt.jpg" />
     <Content Include="Images\Products\Faded Monogram Logo Crewneck T-Shirt.jpg" />
     <Content Include="Images\Products\GG Polyester Tailored Pant.jpg" />
     <Content Include="Images\Products\GG Stretch Jersey Swimsuit.jpg" />
+    <Content Include="Images\Products\Light-Support Non-Padded Longline Sports Bra.jpg" />
     <Content Include="Images\Products\Medusa %2795 Flared Pants.jpg" />
     <Content Include="Images\Products\Medusa Baby Sleepsuit.jpg" />
     <Content Include="Images\Products\MedusaFlaredPants.jpg" />
     <Content Include="Images\Products\Medusa_baby_sleepsuit.jpg" />
+    <Content Include="Images\Products\Nike Swim Men%27s 7in Volley Shorts.jpg" />
     <Content Include="Images\Products\Peter Rabbit X Gucci T-Shirt.jpg" />
+    <Content Include="Images\Products\Sportswear Club Fleece Cargo Shorts.jpg" />
+    <Content Include="Images\Products\Swim Retro Flow Girls T-Back One-Piece Swimsuit.jpg" />
     <Content Include="Images\Products\Swim Retro Flow Girls T-Back One-Piece Swimsuit.png" />
+    <Content Include="Images\Products\Tech Knit Quarter Zip Sweater.jpg" />
     <Content Include="Images\Products\Wool Twill Formal Pants.jpg" />
     <Content Include="Images\Products\Year of the Dragon T-Shirt.jpg" />
     <Content Include="Images\women.jpg" />
