--- a/IClothingApplication/IClothingApplication.csproj
+++ b/IClothingApplication/IClothingApplication.csproj
@@ -255,7 +255,11 @@
     <Content Include="Images\Products\5-Pocket Denim Jeans.jpg" />
     <Content Include="Images\Products\90s Loose Fit Jeans.jpg" />
     <Content Include="Images\Products\AeroSwift Dri-FIT ADV Running Pants.jpg" />
+    <Content Include="Images\Products\Blossom Kids Swimsuit.jpg" />
+    <Content Include="Images\Products\Cage Yarn Chunky Sweater.jpg" />
     <Content Include="Images\Products\Children%27s Wool Sweater With GG.jpg" />
+    <Content Include="Images\Products\CK Sport Future Icon Cropped Mesh T-Shirt.jpg" />
+    <Content Include="Images\Products\CK Sport Future Icon Windbreaker Jacket.jpg" />
     <Content Include="Images\Products\Crochet Crop Top.jpg" />
     <Content Include="Images\Products\Denim and Silk Banana Tree Print Jeans.jpg" />
     <Content Include="Images\Products\Dri-FIT Legend T-Shirt.jpg" />
@@ -268,8 +272,11 @@
     <Content Include="Images\Products\MedusaFlaredPants.jpg" />
     <Content Include="Images\Products\Medusa_baby_sleepsuit.jpg" />
     <Content Include="Images\Products\Nike Swim Men%27s 7in Volley Shorts.jpg" />
+    <Content Include="Images\Products\One-Piece Swimsuit With Plunging Neckline And Bluebell Print.jpg" />
     <Content Include="Images\Products\Peter Rabbit X Gucci T-Shirt.jpg" />
+    <Content Include="Images\Products\Short-Sleeved Marina-Print T-Shirt.jpg" />
     <Content Include="Images\Products\Sportswear Club Fleece Cargo Shorts.jpg" />
+    <Content Include="Images\Products\Stretch Work Pant.jpg" />
     <Content Include="Images\Products\Swim Retro Flow Girls T-Back One-Piece Swimsuit.jpg" />
     <Content Include="Images\Products\Swim Retro Flow Girls T-Back One-Piece Swimsuit.png" />
     <Content Include="Images\Products\Tech Knit Quarter Zip Sweater.jpg" />
